consistent feature min/max normalization

--- a/src/data_test.ipynb
+++ b/src/data_test.ipynb
@@ -2,17 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "!cd ../working/"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 116,
    "metadata": {
     "collapsed": false
@@ -145,7 +134,7 @@
    },
    "outputs": [],
    "source": [
-    "#print ll\n",
+    "# output csv\n",
     "train_df = pd.DataFrame(np.hstack((y_train, X_train)), columns=np.hstack(('label', header)))\n",
     "train_df.to_csv('../working/train_f.csv')"
    ]
