--- a/src/keras_test.ipynb
+++ b/src/keras_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 101,
    "metadata": {
     "collapsed": false
    },
@@ -23,12 +23,14 @@
     "\n",
     "from keras.models import Sequential\n",
     "from keras.utils import np_utils\n",
-    "from keras.layers.core import Dense, Activation, Dropout"
+    "from keras.layers.core import Dense, Activation, Dropout\n",
+    "\n",
+    "from sklearn.preprocessing import MinMaxScaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 102,
    "metadata": {
     "collapsed": true
    },
@@ -36,13 +38,13 @@
    "source": [
     "# Read data\n",
     "train = pd.read_csv('../working/train_f.csv')\n",
-    "labels = train.ix[:,1].values.astype('int32')\n",
-    "X_train = (train.ix[:,2:].values).astype('float32')"
+    "labels = train.ix[:,1].values.astype('int')\n",
+    "X_train = (train.ix[:,2:].values).astype('float64')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 103,
    "metadata": {
     "collapsed": false
    },
@@ -54,28 +56,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 104,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "n = X_train.shape[1]\n",
-    "m_train = X_train.shape[0]\n",
+    "#n = X_train.shape[1]\n",
+    "#m_train = X_train.shape[0]\n",
     "\n",
-    "mu = numpy.mean(X_train, axis=0)\n",
-    "sigma = numpy.std(X_train, axis=0)\n",
+    "#mu = numpy.mean(X_train, axis=0)\n",
+    "#sigma = numpy.std(X_train, axis=0)\n",
     "\n",
-    "Xn_train = np.zeros(X_train.shape)\n",
+    "#Xn_train = np.zeros(X_train.shape)\n",
     "\n",
-    "for i in range(n):\n",
-    "    if sigma[i] > np.spacing(1):\n",
-    "        Xn_train[:,i] = (X_train[:,i] - mu[i])/sigma[i]"
+    "#for i in range(n):\n",
+    "#    if sigma[i] > np.spacing(1):\n",
+    "#        Xn_train[:,i] = (X_train[:,i] - mu[i])/sigma[i]\n",
+    "\n",
+    "min_max_scaler = MinMaxScaler()\n",
+    "Xn_train = min_max_scaler.fit_transform(X_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 105,
    "metadata": {
     "collapsed": false
    },
@@ -90,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 106,
    "metadata": {
     "collapsed": true
    },
@@ -113,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 107,
    "metadata": {
     "collapsed": true
    },
@@ -125,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 108,
    "metadata": {
     "collapsed": false
    },
@@ -135,37 +140,37 @@
      "output_type": "stream",
      "text": [
       "Training...\n",
-      "Train on 8404 samples, validate on 2102 samples\n",
+      "Train on 9455 samples, validate on 1051 samples\n",
       "Epoch 0\n",
-      "0s - loss: 0.0412 - acc.: 0.9626 - val. loss: 0.1082 - val. acc.: 0.8863\n",
+      "0s - loss: 0.0439 - acc.: 0.9601 - val. loss: 0.1612 - val. acc.: 0.8335\n",
       "Epoch 1\n",
-      "0s - loss: 0.0364 - acc.: 0.9627 - val. loss: 0.1100 - val. acc.: 0.8863\n",
+      "0s - loss: 0.0407 - acc.: 0.9610 - val. loss: 0.1621 - val. acc.: 0.8335\n",
       "Epoch 2\n",
-      "0s - loss: 0.0326 - acc.: 0.9665 - val. loss: 0.1080 - val. acc.: 0.8863\n",
+      "0s - loss: 0.0410 - acc.: 0.9598 - val. loss: 0.1567 - val. acc.: 0.8335\n",
       "Epoch 3\n",
-      "0s - loss: 0.0339 - acc.: 0.9652 - val. loss: 0.1114 - val. acc.: 0.8863\n",
+      "0s - loss: 0.0390 - acc.: 0.9620 - val. loss: 0.1598 - val. acc.: 0.8335\n",
       "Epoch 4\n",
-      "0s - loss: 0.0361 - acc.: 0.9626 - val. loss: 0.1124 - val. acc.: 0.8863\n",
+      "0s - loss: 0.0375 - acc.: 0.9632 - val. loss: 0.1603 - val. acc.: 0.8335\n",
       "Epoch 5\n",
-      "0s - loss: 0.0342 - acc.: 0.9646 - val. loss: 0.1135 - val. acc.: 0.8863\n",
+      "0s - loss: 0.0406 - acc.: 0.9593 - val. loss: 0.1551 - val. acc.: 0.8335\n",
       "Epoch 6\n",
-      "0s - loss: 0.0349 - acc.: 0.9639 - val. loss: 0.1122 - val. acc.: 0.8863\n",
+      "0s - loss: 0.0394 - acc.: 0.9606 - val. loss: 0.1589 - val. acc.: 0.8335\n",
       "Epoch 7\n",
-      "0s - loss: 0.0359 - acc.: 0.9625 - val. loss: 0.1146 - val. acc.: 0.8863\n",
+      "0s - loss: 0.0391 - acc.: 0.9610 - val. loss: 0.1591 - val. acc.: 0.8335\n",
       "Epoch 8\n",
-      "0s - loss: 0.0366 - acc.: 0.9617 - val. loss: 0.1193 - val. acc.: 0.8863\n",
+      "0s - loss: 0.0409 - acc.: 0.9590 - val. loss: 0.1565 - val. acc.: 0.8335\n",
       "Epoch 9\n",
-      "0s - loss: 0.0359 - acc.: 0.9625 - val. loss: 0.1217 - val. acc.: 0.8863\n",
+      "0s - loss: 0.0408 - acc.: 0.9589 - val. loss: 0.1541 - val. acc.: 0.8335\n",
       "Epoch 10\n",
-      "0s - loss: 0.0362 - acc.: 0.9621 - val. loss: 0.1276 - val. acc.: 0.8863\n",
+      "0s - loss: 0.0390 - acc.: 0.9606 - val. loss: 0.1581 - val. acc.: 0.8335\n",
       "Epoch 11\n",
-      "0s - loss: 0.0351 - acc.: 0.9635 - val. loss: 0.1284 - val. acc.: 0.8863\n",
+      "0s - loss: 0.0404 - acc.: 0.9592 - val. loss: 0.1550 - val. acc.: 0.8335\n",
       "Epoch 12\n",
-      "0s - loss: 0.0373 - acc.: 0.9607 - val. loss: 0.1420 - val. acc.: 0.8863\n",
+      "0s - loss: 0.0406 - acc.: 0.9589 - val. loss: 0.1550 - val. acc.: 0.8335\n",
       "Epoch 13\n",
-      "0s - loss: 0.0342 - acc.: 0.9643 - val. loss: 0.1468 - val. acc.: 0.8863\n",
+      "0s - loss: 0.0379 - acc.: 0.9618 - val. loss: 0.1563 - val. acc.: 0.8335\n",
       "Epoch 14\n",
-      "0s - loss: 0.0387 - acc.: 0.9593 - val. loss: 0.1527 - val. acc.: 0.8863\n"
+      "0s - loss: 0.0403 - acc.: 0.9591 - val. loss: 0.1548 - val. acc.: 0.8335\n"
      ]
     }
    ],
@@ -176,19 +181,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 109,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "preds = model.predict_classes(Xn_train, verbose=0)\n",
-    "proba = model.predict_proba(Xn_train, verbose=0)"
+    "proba = model.predict_proba(Xn_test, verbose=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 111,
    "metadata": {
     "collapsed": false
    },
@@ -197,50 +202,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-1.04738855  1.00722623 -2.17247486  0.37116376 -0.00975668 -0.58797562\n",
-      "   1.1003902  -0.59398645 -0.090848   -0.02390458 -0.14692491]\n",
-      " [-1.04738855  1.00722623 -2.17247486  0.37116376 -0.00975668 -0.58797562\n",
-      "  -0.90876859  1.68353975 -0.090848   -0.02390458 -0.14692491]\n",
-      " [-0.71879941  1.36471558 -2.17247486 -0.6565991  -0.00975668 -0.58797562\n",
-      "  -0.90876859  1.68353975 -0.090848   -0.02390458 -0.14692491]\n",
-      " [-1.29421377  1.17930448 -2.17247486 -0.42820737 -0.00975668 -0.58797562\n",
-      "   1.1003902  -0.59398645 -0.090848   -0.02390458 -0.14692491]\n",
-      " [-1.29421377  1.17930448 -2.17247486 -0.42820737 -0.00975668 -0.58797562\n",
-      "  -0.90876859  1.68353975 -0.090848   -0.02390458 -0.14692491]\n",
-      " [ 0.34662867  0.71370387 -2.17247486 -0.48530531 -0.00975668 -0.58797562\n",
-      "  -0.90876859  1.68353975 -0.090848   -0.02390458 -0.14692491]\n",
-      " [ 0.47059566  0.44331706 -2.17247486 -0.6565991  -0.00975668 -0.58797562\n",
-      "  -0.90876859  1.68353975 -0.090848   -0.02390458 -0.14692491]\n",
-      " [ 0.47336221  0.23034029 -2.17247486 -0.42820737 -0.00975668 -0.58797562\n",
-      "   1.1003902  -0.59398645 -0.090848   -0.02390458 -0.14692491]\n",
-      " [ 0.47336221  0.23034029 -2.17247486 -0.42820737 -0.00975668 -0.58797562\n",
-      "  -0.90876859  1.68353975 -0.090848   -0.02390458 -0.14692491]\n",
-      " [ 0.46291763  0.48912358 -2.17247486 -0.59950119 -0.00975668 -0.58797562\n",
-      "  -0.90876859  1.68353975 -0.090848   -0.02390458 -0.14692491]]\n"
+      "0.947553778793\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.95      1.00      0.97      9955\n",
+      "          1       0.00      0.00      0.00       551\n",
+      "\n",
+      "avg / total       0.90      0.95      0.92     10506\n",
+      "\n",
+      "[[9955    0]\n",
+      " [ 551    0]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Program Files\\Anaconda\\lib\\site-packages\\sklearn\\metrics\\metrics.py:1771: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n"
      ]
     }
    ],
    "source": [
-    "print Xn_train[0:10, :]"
+    "# accuracy\n",
+    "matches = (preds == labels)\n",
+    "print matches.sum() / float(len(matches))\n",
+    "\n",
+    "# f1 score\n",
+    "from sklearn import metrics\n",
+    "print metrics.classification_report(labels, preds)\n",
+    "\n",
+    "# confusion matrix\n",
+    "print metrics.confusion_matrix(labels, preds)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
