--- a/src/sklearn_test.ipynb
+++ b/src/sklearn_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 144,
    "metadata": {
     "collapsed": false
    },
@@ -20,36 +20,39 @@
     "import numpy as np\n",
     "from sklearn.cross_validation import train_test_split\n",
     "from sklearn.ensemble import ExtraTreesClassifier\n",
-    "from sklearn.neighbors import KNeighborsClassifier"
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.preprocessing import MinMaxScaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 145,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# load train and test data\n",
-    "wnv_train = np.loadtxt('../working/train_f.csv', delimiter=',', dtype=int, skiprows=1)"
+    "wnv_train = np.loadtxt('../working/train_f.csv', delimiter=',', dtype=float64, skiprows=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 146,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "# split the data into training and validation sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(wnv_train[:,2:], wnv_train[:,1])"
+    "min_max_scaler = MinMaxScaler()\n",
+    "wnv_mm = min_max_scaler.fit_transform(wnv_train[:,2:])\n",
+    "X_train, X_test, y_train, y_test = train_test_split(wnv_mm, wnv_train[:,1].astype(int))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 147,
    "metadata": {
     "collapsed": true
    },
@@ -64,24 +67,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 148,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "clf = KNeighborsClassifier(n_neighbors=n_neighbors)\n",
-    "#clf = ExtraTreesClassifier(n_estimators=n_estimators, n_jobs=n_jobs)\n",
-    "clf.fit(X_train, y_train)\n",
+    "#clf = KNeighborsClassifier(n_neighbors=n_neighbors)\n",
+    "clf = ExtraTreesClassifier(n_estimators=n_estimators, n_jobs=n_jobs)\n",
+    "clf.fit(Xn_train, y_train)\n",
     "\n",
     "# use the model to predict the labels of the test data\n",
-    "predicted = clf.predict(X_test)\n",
+    "predicted = clf.predict(Xn_test)\n",
     "expected = y_test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 149,
    "metadata": {
     "collapsed": false
    },
@@ -90,16 +93,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.936048724781\n",
+      "0.909783022459\n",
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       0.94      0.99      0.97      2467\n",
-      "          1       0.40      0.10      0.16       160\n",
+      "          0       0.94      0.97      0.95      2471\n",
+      "          1       0.03      0.02      0.02       156\n",
       "\n",
-      "avg / total       0.91      0.94      0.92      2627\n",
+      "avg / total       0.89      0.91      0.90      2627\n",
       "\n",
-      "[[2443   24]\n",
-      " [ 144   16]]\n"
+      "[[2387   84]\n",
+      " [ 153    3]]\n"
      ]
     }
    ],
@@ -118,21 +121,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 150,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "87\n",
+      "156\n"
+     ]
+    }
+   ],
+   "source": [
+    "print np.count_nonzero(predicted == 1)\n",
+    "print np.count_nonzero(y_test)"
+   ]
   },
   {
    "cell_type": "code",
