working test scripts

--- a/src/keras_test.ipynb
+++ b/src/keras_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 117,
    "metadata": {
     "collapsed": false
    },
@@ -25,62 +25,72 @@
     "from keras.utils import np_utils\n",
     "from keras.layers.core import Dense, Activation, Dropout\n",
     "\n",
-    "from sklearn.preprocessing import MinMaxScaler"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.cross_validation import train_test_split\n",
+    "\n",
+    "import datetime, time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 118,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Read data\n",
-    "train = pd.read_csv('../working/train_f.csv')\n",
-    "labels = train.ix[:,1].values.astype('int')\n",
-    "X_train = (train.ix[:,2:].values).astype('float64')"
+    "wnv_train = pd.read_csv('../working/train_f.csv')\n",
+    "wnv_test = pd.read_csv('../working/test_f.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# convert list of labels to binary class matrix\n",
-    "y_train = np_utils.to_categorical(labels)"
+    "labels = wnv_train.ix[:,1].values.astype('int')\n",
+    "yr_train = np_utils.to_categorical(labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 120,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "#n = X_train.shape[1]\n",
-    "#m_train = X_train.shape[0]\n",
+    "# raw data\n",
+    "#yr_train = wnv_train[:,1].astype(int)\n",
+    "Xr_train =(wnv_train.ix[:,2:].values).astype('float64')\n",
+    "Xr_test = (wnv_test.ix[:,1:].values).astype('float64')\n",
     "\n",
-    "#mu = numpy.mean(X_train, axis=0)\n",
-    "#sigma = numpy.std(X_train, axis=0)\n",
+    "# normalize data\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(Xr_train)\n",
+    "Xn_train = scaler.transform(Xr_train)\n",
+    "Xn_test = scaler.transform(Xr_test)\n",
     "\n",
-    "#Xn_train = np.zeros(X_train.shape)\n",
-    "\n",
-    "#for i in range(n):\n",
-    "#    if sigma[i] > np.spacing(1):\n",
-    "#        Xn_train[:,i] = (X_train[:,i] - mu[i])/sigma[i]\n",
-    "\n",
-    "min_max_scaler = MinMaxScaler()\n",
-    "Xn_train = min_max_scaler.fit_transform(X_train)"
+    "X_train, X_test, y_train, y_test = train_test_split(Xn_train, yr_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 122,
    "metadata": {
     "collapsed": false
    },
@@ -88,14 +98,15 @@
    "source": [
     "input_dim = Xn_train.shape[1]\n",
     "nb_classes = y_train.shape[1]\n",
-    "hidden_dim = 64\n",
-    "hidden_layers = 1\n",
-    "dropout = 0.15"
+    "hidden_dim = 512\n",
+    "\n",
+    "hidden_layers = 2\n",
+    "dropout = 0.25"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 123,
    "metadata": {
     "collapsed": true
    },
@@ -103,7 +114,7 @@
    "source": [
     "model = None\n",
     "\n",
-    "# Here's a Deep Dumb MLP (DDMLP)\n",
+    "# create model\n",
     "model = Sequential()\n",
     "model.add(Dense(input_dim, hidden_dim, init='lecun_uniform'))\n",
     "model.add(Activation('relu'))\n",
@@ -113,19 +124,64 @@
     "    model.add(Activation('relu'))\n",
     "    model.add(Dropout(dropout))\n",
     "model.add(Dense(hidden_dim, nb_classes, init='lecun_uniform'))\n",
-    "model.add(Activation('relu'))"
+    "model.add(Activation('softmax'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 124,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# compile model\n",
+    "model.compile(loss='categorical_crossentropy', optimizer='adadelta')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training...\n",
+      "Epoch 0\n",
+      "7879/7879 [==============================] - 6s - loss: 0.1879 - acc.: 0.9484     \n",
+      "Epoch 1\n",
+      "7879/7879 [==============================] - 6s - loss: 0.1755 - acc.: 0.9484     \n",
+      "Epoch 2\n",
+      "7879/7879 [==============================] - 6s - loss: 0.1754 - acc.: 0.9482     \n",
+      "Epoch 3\n",
+      "7879/7879 [==============================] - 6s - loss: 0.1725 - acc.: 0.9484     \n",
+      "Epoch 4\n",
+      "7879/7879 [==============================] - 6s - loss: 0.1731 - acc.: 0.9485     \n",
+      "Epoch 5\n",
+      "7879/7879 [==============================] - 6s - loss: 0.1720 - acc.: 0.9480     \n",
+      "Epoch 6\n",
+      "7879/7879 [==============================] - 6s - loss: 0.1686 - acc.: 0.9481     \n",
+      "Epoch 7\n",
+      "6272/7879 [======================>.......] - ETA: 1s - loss: 0.1707 - acc.: 0.9471"
+     ]
+    }
+   ],
    "source": [
-    "# we'll use MSE (mean squared error) for the loss, and RMSprop as the optimizer\n",
-    "model.compile(loss='mse', optimizer='rmsprop')"
+    "print(\"Training...\")\n",
+    "model.fit(X_train, y_train, nb_epoch=10, batch_size=16, validation_split=0.0, show_accuracy=True, verbose=1)"
    ]
   },
   {
@@ -139,44 +195,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training...\n",
-      "Train on 9455 samples, validate on 1051 samples\n",
-      "Epoch 0\n",
-      "0s - loss: 0.0439 - acc.: 0.9601 - val. loss: 0.1612 - val. acc.: 0.8335\n",
-      "Epoch 1\n",
-      "0s - loss: 0.0407 - acc.: 0.9610 - val. loss: 0.1621 - val. acc.: 0.8335\n",
-      "Epoch 2\n",
-      "0s - loss: 0.0410 - acc.: 0.9598 - val. loss: 0.1567 - val. acc.: 0.8335\n",
-      "Epoch 3\n",
-      "0s - loss: 0.0390 - acc.: 0.9620 - val. loss: 0.1598 - val. acc.: 0.8335\n",
-      "Epoch 4\n",
-      "0s - loss: 0.0375 - acc.: 0.9632 - val. loss: 0.1603 - val. acc.: 0.8335\n",
-      "Epoch 5\n",
-      "0s - loss: 0.0406 - acc.: 0.9593 - val. loss: 0.1551 - val. acc.: 0.8335\n",
-      "Epoch 6\n",
-      "0s - loss: 0.0394 - acc.: 0.9606 - val. loss: 0.1589 - val. acc.: 0.8335\n",
-      "Epoch 7\n",
-      "0s - loss: 0.0391 - acc.: 0.9610 - val. loss: 0.1591 - val. acc.: 0.8335\n",
-      "Epoch 8\n",
-      "0s - loss: 0.0409 - acc.: 0.9590 - val. loss: 0.1565 - val. acc.: 0.8335\n",
-      "Epoch 9\n",
-      "0s - loss: 0.0408 - acc.: 0.9589 - val. loss: 0.1541 - val. acc.: 0.8335\n",
-      "Epoch 10\n",
-      "0s - loss: 0.0390 - acc.: 0.9606 - val. loss: 0.1581 - val. acc.: 0.8335\n",
-      "Epoch 11\n",
-      "0s - loss: 0.0404 - acc.: 0.9592 - val. loss: 0.1550 - val. acc.: 0.8335\n",
-      "Epoch 12\n",
-      "0s - loss: 0.0406 - acc.: 0.9589 - val. loss: 0.1550 - val. acc.: 0.8335\n",
-      "Epoch 13\n",
-      "0s - loss: 0.0379 - acc.: 0.9618 - val. loss: 0.1563 - val. acc.: 0.8335\n",
-      "Epoch 14\n",
-      "0s - loss: 0.0403 - acc.: 0.9591 - val. loss: 0.1548 - val. acc.: 0.8335\n"
+      "[[ 1.  0.]\n",
+      " [ 1.  0.]\n",
+      " [ 1.  0.]\n",
+      " ..., \n",
+      " [ 1.  0.]\n",
+      " [ 1.  0.]\n",
+      " [ 1.  0.]]\n"
      ]
     }
    ],
    "source": [
-    "print(\"Training...\")\n",
-    "model.fit(Xn_train, y_train, nb_epoch=15, batch_size=16, validation_split=0.1, show_accuracy=True, verbose=2)"
+    "preds = model.predict_classes(X_test, verbose=0)\n",
+    "proba = model.predict_proba(X_test, verbose=0)\n",
+    "print y_test"
    ]
   },
   {
@@ -185,15 +217,66 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.948610582413\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "        0.0       0.95      1.00      0.97      2491\n",
+      "        1.0       0.56      0.04      0.07       136\n",
+      "\n",
+      "avg / total       0.93      0.95      0.93      2627\n",
+      "\n",
+      "[[2487    4]\n",
+      " [ 131    5]]\n",
+      "0.856114364654\n"
+     ]
+    }
+   ],
    "source": [
-    "preds = model.predict_classes(Xn_train, verbose=0)\n",
-    "proba = model.predict_proba(Xn_test, verbose=0)"
+    "# accuracy\n",
+    "matches = (preds == y_test[:,1])\n",
+    "print matches.sum() / float(len(matches))\n",
+    "\n",
+    "# f1 score\n",
+    "from sklearn import metrics\n",
+    "print metrics.classification_report( y_test[:,1], preds)\n",
+    "\n",
+    "# confusion matrix\n",
+    "print metrics.confusion_matrix( y_test[:,1], preds)\n",
+    "\n",
+    "# auc\n",
+    "print metrics.roc_auc_score(y_test[:,1], proba[:,1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 110,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.90986024435449553"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.max(proba[:,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
    "metadata": {
     "collapsed": false
    },
@@ -202,38 +285,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.947553778793\n",
-      "             precision    recall  f1-score   support\n",
-      "\n",
-      "          0       0.95      1.00      0.97      9955\n",
-      "          1       0.00      0.00      0.00       551\n",
-      "\n",
-      "avg / total       0.90      0.95      0.92     10506\n",
-      "\n",
-      "[[9955    0]\n",
-      " [ 551    0]]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Program Files\\Anaconda\\lib\\site-packages\\sklearn\\metrics\\metrics.py:1771: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n"
+      "116293/116293 [==============================] - 1s     \n",
+      "0.99736629842\n"
      ]
     }
    ],
    "source": [
-    "# accuracy\n",
-    "matches = (preds == labels)\n",
-    "print matches.sum() / float(len(matches))\n",
+    "proba = model.predict_proba(Xn_test)\n",
+    "print np.max(proba[:,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "st = datetime.datetime.fromtimestamp(time.time()).strftime('%Y%m%d_%H%M%S')\n",
     "\n",
-    "# f1 score\n",
-    "from sklearn import metrics\n",
-    "print metrics.classification_report(labels, preds)\n",
+    "def write_preds(proba, fname):\n",
+    "    pd.DataFrame({\"Id\": list(range(1,len(proba)+1)), \"WnvPresent\": proba}).to_csv(fname, index=False, header=True)\n",
     "\n",
-    "# confusion matrix\n",
-    "print metrics.confusion_matrix(labels, preds)"
+    "#write_preds(preds[range(28000)], \"keras-mlp_\" + st + \".csv\")\n",
+    "write_preds(proba[:,1], \"../working/keras_test_\" + st + \".csv\")"
    ]
   },
   {
