--- a/src/data_test.ipynb
+++ b/src/data_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 181,
    "metadata": {
     "collapsed": false
    },
@@ -12,6 +12,14 @@
      "output_type": "stream",
      "text": [
       "Populating the interactive namespace from numpy and matplotlib\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: pylab import has clobbered these variables: ['f', 'datetime', 'test']\n",
+      "`%matplotlib` prevents importing * from pylab and numpy\n"
      ]
     }
    ],
@@ -27,14 +35,16 @@
     "from scipy.spatial import Voronoi, voronoi_plot_2d\n",
     "from scipy.constants.constants import F2C\n",
     "\n",
-    "from datetime import datetime"
+    "from calendar import monthrange\n",
+    "\n",
+    "from datetime import datetime, date, timedelta"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 218,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -44,53 +54,13 @@
     "train = pd.read_csv('../input/train.csv')[['Date', 'Address', 'Species', 'Block', 'Street', 'Trap', 'AddressNumberAndStreet', 'Latitude', 'Longitude', 'AddressAccuracy', 'NumMosquitos', 'WnvPresent']]\n",
     "test = pd.read_csv('../input/test.csv')[['Id', 'Date', 'Address', 'Species', 'Block', 'Street', 'Trap', 'AddressNumberAndStreet', 'Latitude', 'Longitude', 'AddressAccuracy']]\n",
     "\n",
-    "weather = pd.read_csv('../input/weather.csv')[['Station', 'Date', 'Tmax', 'Tmin', 'Tavg', 'Depart', 'DewPoint', 'WetBulb', 'Heat', 'Cool', 'Sunrise', 'Sunset', 'CodeSum', 'Depth', 'Water1', 'SnowFall', 'PrecipTotal', 'StnPressure', 'SeaLevel', 'ResultSpeed', 'ResultDir', 'AvgSpeed']]"
+    "date_parser = lambda x: datetime.strptime(x, \"%Y-%m-%d\")\n",
+    "weather = pd.read_csv('../input/weather.csv', index_col=1, parse_dates =['Date'], date_parser=date_parser)[['Station', 'Tmax', 'Tmin', 'Tavg', 'Depart', 'DewPoint', 'WetBulb', 'Heat', 'Cool', 'Sunrise', 'Sunset', 'CodeSum', 'Depth', 'Water1', 'SnowFall', 'PrecipTotal', 'StnPressure', 'SeaLevel', 'ResultSpeed', 'ResultDir', 'AvgSpeed']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# precompute trap counts\n",
-    "traps = np.unique(train['Trap'])\n",
-    "n_traps = traps.size\n",
-    "trap_count = np.empty(n_traps, dtype=int)\n",
-    "for i in range(n_traps):\n",
-    "    trap_count[i] = train[(train.Trap == traps[i]) & (train.WnvPresent == 1)].as_matrix().shape[0]\n",
-    "#print sum(trap_count)\n",
-    "trap_dict = dict(zip(traps, trap_count))\n",
-    "#print trap_dict\n",
-    "\n",
-    "# get species info\n",
-    "species = np.unique(train['Species'])\n",
-    "n_species = species.size\n",
-    "#print species\n",
-    "\n",
-    "# replace \n",
-    "stations = np.unique(weather['Station'])\n",
-    "weather_features = ['Tmin', 'Tmax', 'Tavg', 'DewPoint', 'WetBulb', 'Heat', 'Cool', 'PrecipTotal', 'StnPressure', 'SeaLevel', 'ResultSpeed', 'ResultDir', 'AvgSpeed']\n",
-    "#print weather[weather_features].replace('\\D+', 0, regex=True)\n",
-    "\n",
-    "weather_header = []\n",
-    "for s in stations:\n",
-    "    for f in weather_features:\n",
-    "        weather_header.append(f + str(s))\n",
-    "\n",
-    "# reference lat/long for chicago\n",
-    "ll_chicago = (41.8369, -87.6847)\n",
-    "\n",
-    "# data header\n",
-    "header = np.hstack((np.array(['dx', 'dy', 'dt', 'tc']), species, weather_header))\n",
-    "n_features = header.size"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 219,
    "metadata": {
     "collapsed": false
    },
@@ -99,26 +69,118 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[array([ 60.  ,  88.  ,  74.  ,  58.  ,  65.  ,   0.  ,   9.  ,   0.  ,\n",
-      "        29.39,  30.11,   5.8 ,  18.  ,   6.5 ,  65.  ,  88.  ,  77.  ,\n",
-      "        59.  ,  66.  ,   0.  ,  12.  ,   0.  ,  29.44,  30.09,   5.8 ,\n",
-      "        16.  ,   7.4 ]), array([ 60. ,  88. ,  74. ,  58. ,  65. ,   0. ,   0. ,   0. ,   0. ,\n",
-      "         0. ,   5.8,  18. ,   0. ,  65. ,  88. ,  77. ,  59. ,  66. ,\n",
-      "         0. ,  12. ,   0. ,   0. ,   0. ,   5.8,  16. ,   0. ])]\n"
+      "4.05147058824\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# precompute trap counts\n",
+    "traps = np.unique(train['Trap'])\n",
+    "n_traps = traps.size\n",
+    "tc = np.empty(n_traps, dtype=int)\n",
+    "for i in range(n_traps):\n",
+    "    tc[i] = train[(train.Trap == traps[i]) & (train.WnvPresent == 1)].as_matrix().shape[0]\n",
+    "#print sum(trap_count)\n",
+    "trap_dict = dict(zip(traps, tc))\n",
+    "trap_avg = np.average(tc)\n",
+    "print trap_avg\n",
+    "\n",
+    "# get species info\n",
+    "#species = np.unique(train['Species'].replace(' ', '_', regex=True))\n",
+    "species = np.unique(train['Species'])\n",
+    "n_species = species.size\n",
+    "n_days = 7\n",
+    "#print species\n",
+    "\n",
+    "# replace \n",
+    "stations = np.unique(weather['Station'])\n",
+    "n_stations = stations.size\n",
+    "print n_stations\n",
+    "weather_features = ['Tmin', 'Tmax', 'Tavg', 'DewPoint', 'WetBulb', 'Heat', 'Cool', 'PrecipTotal', 'StnPressure', 'SeaLevel', 'ResultSpeed', 'ResultDir', 'AvgSpeed']\n",
+    "n_weather_features = len(weather_features)\n",
+    "#print weather[weather_features].replace('\\D+', 0, regex=True)\n",
+    "\n",
+    "weather_header = []\n",
+    "for d in range(n_days):\n",
+    "    for s in stations:\n",
+    "        for f in weather_features:\n",
+    "            weather_header.append(f + '_s' + str(s) + '_d' + str(n_days - d - 1))\n",
+    "for s in stations:\n",
+    "    for f in weather_features:\n",
+    "        weather_header.append(f + '_s' + str(s) + '_avg')\n",
+    "#print weather_header\n",
+    "\n",
+    "# reference lat/long for chicago\n",
+    "ll_chicago = (41.8369, -87.6847)\n",
+    "\n",
+    "# data header\n",
+    "header = np.hstack((np.array(['dist_x', 'dist_y', 'day_year', 'day_month', 'day_week', 'trap_count']), species, weather_header))\n",
+    "n_features = header.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2007-05-23 00:00:00 2007-05-29 00:00:00\n",
+      "['CULEX ERRATICUS' 'CULEX PIPIENS' 'CULEX PIPIENS/RESTUANS'\n",
+      " 'CULEX RESTUANS' 'CULEX SALINARIUS' 'CULEX TARSALIS' 'CULEX TERRITANS']\n"
      ]
     }
    ],
    "source": [
     "x = train.iloc[0]\n",
     "d = x['Date']\n",
-    "w = np.hstack(weather[weather.Date == d][weather_features].replace('\\D+', 0, regex=True).as_matrix()).astype(float64)\n",
-    "wt = np.hstack(weather[weather.Date == d][weather_features].replace('[a-zA-Z]', 0, regex=True).as_matrix()).astype(float64)\n",
-    "print [wt, w]"
+    "d0 = datetime.strptime(d, \"%Y-%m-%d\")\n",
+    "dn = d0 - timedelta(days=n_days-1)\n",
+    "print dn, d0\n",
+    "\n",
+    "wf = weather.ix[dn:d0][weather_features].replace('[a-zA-Z]', 0, regex=True)\n",
+    "w = np.append(np.hstack(wf.as_matrix().astype(float64)), np.average(wf.as_matrix().astype(float64), axis=0))\n",
+    "\n",
+    "#print weather.ix[dn:d0][weather_features].replace('[a-zA-Z]', 0, regex=True)\n",
+    "\n",
+    "#wa = np.empty((n_days, n_stations, n_weather_features), dtype=float64)\n",
+    "#for i in range(len(stations)):\n",
+    "#    wa[:, i, :] = weather.ix[weather.Station == stations[i]][dn:d0][weather_features].replace('[a-zA-Z]', 0, regex=True).as_matrix().astype(float64)\n",
+    "#print wa[:, :, 1]\n",
+    "#print wa.ravel(order='C')\n",
+    "#print np.average(wa[:, 0, :], axis=0)\n",
+    "#print np.append(w, np.average(wf, axis=0))\n",
+    "\n",
+    "wa = np.empty((n_days, n_stations, n_weather_features), dtype=float64)\n",
+    "for i in range(len(stations)):\n",
+    "    wa[:, i, :] = weather.ix[weather.Station == stations[i]][dn:d0][weather_features].replace('[a-zA-Z]', 0, regex=True).as_matrix().astype(float64)\n",
+    "w = wa.ravel(order='C')\n",
+    "for i in range(len(stations)):\n",
+    "    w = np.append(w, np.average(wa[:, i, :], axis=0))\n",
+    "\n",
+    "#print w\n",
+    "\n",
+    "#w = np.hstack(weather[weather.Date == d][weather_features].replace('\\D+', 0, regex=True).as_matrix()).astype(float64)\n",
+    "#w = np.hstack(weather[weather.Date == '2007-05-22'][weather_features].replace('[a-zA-Z]', 0, regex=True).as_matrix()).astype(float64)\n",
+    "#print [w]\n",
+    "\n",
+    "dy1 = datetime.strptime(str(d0.year) + \"-01-01\", \"%Y-%m-%d\")\n",
+    "day_year = abs((d0 - dy1).days)\n",
+    "day_month = float(d0.day)/float(monthrange(d0.year, d0.month)[1])\n",
+    "day_week = d0.weekday()\n",
+    "#print day_year, day_month, day_week\n",
+    "\n",
+    "print species"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 221,
    "metadata": {
     "collapsed": true
    },
@@ -135,40 +197,68 @@
     "        d = x['Date']\n",
     "        s = x['Species']\n",
     "        t = x['Trap']\n",
+    "        \n",
+    "        d0 = datetime.strptime(d, \"%Y-%m-%d\")\n",
+    "        dn = d0 - timedelta(days=n_days-1)\n",
     "        #w = np.hstack(weather[weather.Date == d][weather_features].as_matrix())\n",
     "        #w[:] = [float(re.sub(\"\\D\", \"0\", j)) for j in w]\n",
-    "        w = np.hstack(weather[weather.Date == d][weather_features].replace('[a-zA-Z]', 0, regex=True).as_matrix()).astype(float64)\n",
-    "\n",
-    "        # get dx and dy\n",
-    "        dx = vincenty(ll_chicago, (ll_chicago[0], ll[1])).meters\n",
-    "        if(ll_chicago[1] > ll[1]):\n",
-    "            dx *= -1\n",
-    "        dy = vincenty(ll_chicago, (ll[0], ll_chicago[1])).meters\n",
-    "        if(ll_chicago[0] > ll[0]):\n",
-    "            dy *= -1\n",
-    "\n",
+    "        #w = np.hstack(weather[weather.Date == d][weather_features].replace('[a-zA-Z]', 0, regex=True).as_matrix()).astype(float64)\n",
+    "        #wf = wf = weather.ix[dn:d0][weather_features].replace('[a-zA-Z]', 0, regex=True).as_matrix().astype(float64)\n",
+    "        #w = np.append(np.hstack(wf), np.average(wf, axis=0))\n",
+    "        wa = np.empty((n_days, n_stations, n_weather_features), dtype=float64)\n",
+    "        for j in range(len(stations)):\n",
+    "            wa[:, j, :] = weather.ix[weather.Station == stations[j]][dn:d0][weather_features].replace('[a-zA-Z]', 0, regex=True).as_matrix().astype(float64)\n",
+    "        w = wa.ravel(order='C')\n",
+    "        for j in range(len(stations)):\n",
+    "            w = np.append(w, np.average(wa[:, j, :], axis=0))\n",
+    "        \n",
     "        # get day of year\n",
-    "        d1 = datetime.strptime(d, \"%Y-%m-%d\")\n",
-    "        d0 = datetime.strptime(str(d1.year) + \"-01-01\", \"%Y-%m-%d\")\n",
-    "        dt = abs((d1 - d0).days)\n",
-    "\n",
+    "        dy1 = datetime.strptime(str(d0.year) + \"-01-01\", \"%Y-%m-%d\")\n",
+    "        day_year = abs((d0 - dy1).days)\n",
+    "        day_month = float(d0.day)/float(monthrange(d0.year, d0.month)[1])\n",
+    "        day_week = d0.weekday()\n",
+    "        \n",
+    "        # get dx and dy\n",
+    "        dist_x = vincenty(ll_chicago, (ll_chicago[0], ll[1])).meters\n",
+    "        if(ll_chicago[1] > ll[1]):\n",
+    "            dist_x *= -1\n",
+    "        dist_y = vincenty(ll_chicago, (ll[0], ll_chicago[1])).meters\n",
+    "        if(ll_chicago[0] > ll[0]):\n",
+    "            dist_y *= -1\n",
+    "        \n",
     "        # get trap count\n",
+    "        trap_count = trap_avg\n",
     "        if t in trap_dict:\n",
-    "            tc = trap_dict[t]\n",
-    "        else:\n",
-    "            tc = 0\n",
+    "            trap_count = trap_dict[t]\n",
     "\n",
     "        # get species array\n",
     "        sa = np.array(s == species).astype(int)\n",
     "\n",
-    "        X[i, :] = np.hstack((np.array([dx, dy, dt, tc]), sa, w))\n",
+    "        X[i, :] = np.hstack((np.array([dist_x, dist_y, day_year, day_month, day_week, trap_count]), sa, w))\n",
     "    \n",
     "    return X"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 222,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#data = train.iloc[0:3]\n",
+    "#m = data.shape[0]\n",
+    "#X = np.empty((m, n_features), dtype=float64)\n",
+    "#for i in range(m):\n",
+    "#    print i\n",
+    "\n",
+    "#print gen_features(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
    "metadata": {
     "collapsed": false
    },
@@ -182,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 224,
    "metadata": {
     "collapsed": false
    },
